# lds-bulk-updater

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  mutation-testing.yml
bulkdata_updater/: INSTALL.md  __init__.py  bulkdata_updater.py  config_template.yaml  get_source_info.py  version_check.py
tests/: test_bulkdata_updater.py  test_bulkdata_updater_api.py
