[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 127

[tool.coverage.report]
exclude_lines = [
  'if __name__ == "__main__":'
]
fail_under = 100

[tool.coverage.run]
branch = true
omit = [
  ".venv/*"
]

[tool.isort]
case_sensitive = true
line_length = 127
profile = "black"

[tool.mypy]
show_error_codes = true
strict = true

[tool.poetry]
authors = [
  "PKhosla <pkhosla@linz.govt.nz>",
  "Mdavidson <mdavidson@linz.govt.nz>"
]
description = "A minimal repo for updating LDS layers in bulk"
license = "MIT"
name = "lds-bulk-updater"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.32.4"
typer = "*"
dotenv = "^0.9.9"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
gitlint = "*"
isort = "*"
language-formatters-pre-commit-hooks = "*"
mutmut = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-randomly = "*"

[tool.pylint.FORMAT]
max-line-length = 127

[tool.pylint.MASTER]
disable = [
  "bad-continuation",
  "duplicate-code",
  "invalid-name",
  "missing-docstring",
  "too-few-public-methods"
]
